@@ -2,6 +2,10 @@
 			A very simple session manager
 			by Thomas Leonard
 
+09-Dec-2002
+~~~~~~~~~~~
+Style improvements to options window.
+
 04-Dec-2002
 ~~~~~~~~~~~
 Added a German translation (Guido Schimmels).
